--- a/views/contact.html
+++ b/views/contact.html
@@ -35,10 +35,10 @@
 <div class="row">
 	<div class="col-sm-8 col-sm-offset-2 text-center">
 		<ul class="list-inline center-block">
-			<li><a href="javascript:"><img src="img/soc_fb.png"></a></li>
-			<li><a href="javascript:"><img src="img/soc_tw.png"></a></li>
-			<li><a href="javascript:"><img src="img/soc_gplus.png"></a></li>
-			<li><a href="javascript:"><img src="img/soc_pin.png"></a></li>
+			<li><a href="javascript:"><img src="/public/img/soc_fb.png"></a></li>
+			<li><a href="javascript:"><img src="/public/img/soc_tw.png"></a></li>
+			<li><a href="javascript:"><img src="/public/img/soc_gplus.png"></a></li>
+			<li><a href="javascript:"><img src="/public/img/soc_pin.png"></a></li>
 		</ul>
 	</div>
 </div>
