--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
 		<title>Taxi Tracker</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link rel="stylesheet" href="css/bootstrap.min.css"/>
-		<link rel="stylesheet" href="css/app.css"/>  
+		<link rel="stylesheet" href="/public/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="/public/css/app.css"/>  
 	</head>
 	<body>
 		<div class="navbar-wrapper">
@@ -75,13 +75,10 @@
 				</div>
 			</div>
 		</script>
-		<script src="lib/angular/angular.js"></script>
-		<script src="lib/angular/angular-route.js"></script>
-		<script src="lib/angular-ui/ui-bootstrap-custom-tpls-0.10.0.js"></script>
-		<script src="js/app.js"></script>
-		<script src="js/services.js"></script>
-		<script src="js/controllers.js"></script>
-		<script src="js/filters.js"></script>
-		<script src="js/directives.js"></script>
+		<script src="/public/lib/angular/angular.js"></script>
+		<script src="/public/lib/angular/angular-route.js"></script>
+		<script src="/public/lib/angular-ui/ui-bootstrap-custom-tpls-0.10.0.js"></script>
+		<script src="/public/js/app.js"></script>
+		<script src="/public/js/filters.js"></script>
 	</body>
 </html>
