--- a/views/index.html
+++ b/views/index.html
@@ -24,23 +24,11 @@
 							<li ng-class="{active: activetab == '/home'}"><a href="#home">Home</a></li>
 							<li ng-class="{active: activetab == '/about'}"><a href="#about">About</a></li>
 							<li ng-class="{active: activetab == '/contact'}"><a href="#contact">Contact</a></li>
-<!-- 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-									Dropdown <b class="caret"></b>
-								</a>
-								<ul class="dropdown-menu">
-									<li><a href="#">Action</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something else here</a></li>
-									<li class="divider"></li>
-									<li><a href="#">Separated link</a></li>
-									<li><a href="#">One more separated link</a></li>
-								</ul>
-							</li> -->
+							<li ng-class="{active: activetab == '/login'}"><a href="#login">Login</a></li>
 						</ul>
 					</div>
 				</div>
-			</div><!-- /container -->
+			</div>
 		</div><!-- /navbar wrapper -->
 		<br>
 		<br>
