--- a/public/css/app.css
+++ b/public/css/app.css
@@ -98,3 +98,38 @@ body {
 		line-height: 1.4;
 	}
 }
+
+.sidebox {
+	background-color: rgb(250, 250, 250);
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	padding: 18px;
+	margin-top: 26px;
+	border: 1px solid rgb(235, 235, 235);
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+	font-family: 'Open Sans', sans-serif;
+	line-height: 24px;
+	color: rgb(51, 51, 51);
+}
+
+.sidebar{
+	padding-top: 23px;
+}
+
+.sidebox-title {
+	font-weight: normal;
+	font-style: normal;
+	font-size: 20px;
+	letter-spacing: 0px;
+	line-height: 40px;
+	font-family: 'Source Sans Pro', sans-serif;
+	color: rgb(51, 51, 51);
+}
+
+.sidebox a {
+	color: rgb(208, 88, 3);
+	font-family: 'Open Sans', sans-serif;
+}
