--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
 										<h1 class="text-center">Login</h1>
 									</div>
 									<div class="modal-footer" style="margin-top:0px">
-										<form class="form col-md-12 center-block" name="form" ng-submit="submit()" method="post" novalidate>
+										<form class="form col-md-12 center-block" name="form" action="/login" method="post" novalidate>
 											<div class="form-group" ng-class="error('username')">
 												<input type="text" id="username" ng-model="user.username" name="username" class="form-control input-lg" placeholder="Email" required>
 												<span class="help-block" ng-show="form.username.$invalid && form.username.$dirty">
@@ -45,8 +45,8 @@
 												</span>
 											</div>
 											<div class="form-group">
-												<button ng-disabled="form.$invalid" class="btn btn-primary btn-lg">Sign In</button>
-												<button class="btn btn-primary btn-lg" ng-click="cancel()">Cancel</button>
+												<button ng-disabled="form.$invalid" class="btn btn-primary btn-lg" type="submit"> Sign In </button>
+												<button class="btn btn-primary btn-lg" ng-click="cancel()" type="button">Cancel</button>
 											</div>	
 										</form>											
 									</div>
@@ -59,7 +59,7 @@
 		</div><!-- /navbar wrapper -->
 		<br>
 		<br>
-		<div ng-view></div>
+		<div class="container" ng-view></div>
 
 		<script src="/lib/angular/angular.js"></script>
 		<script src="/lib/angular/angular-route.js"></script>
