added about us page

--- a/views/about.html
+++ b/views/about.html
@@ -1,1 +1,67 @@
-skfdslfmsndfsmdfnfslfnsfkljfs;flksflskfslfslfkjsfklsfjsklfd
+<div class="row sidebar">
+	<div class="col-md-8" id="divMain">
+		<h1>About Us</h1>
+		<hr>
+		<h3>Our Approach</h3>
+		<p><strong>There are many variations of passages of Lorem Ipsum available.</strong></p>                                 
+		<p>
+			There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don’t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn’t anything embarrassing hidden in the middle of text. 
+		</p>
+		<h3>Our Team</h3>
+		<div class="row">
+			<div class="col-md-2">
+				<img src="img/services-image-1.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
+			</div>
+			<div class="col-md-10">
+				<p>
+					Lorem ipsum dolor sit amet, consectetueradipiscing elied diam nonummy nibh euisod tincidunt ut laoreet dolore magna aliquam erat volutpatorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+		</div>
+		<hr>
+		<div class="row">
+			<div class="col-md-2">
+				<img src="img/services-image-2.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
+			</div>
+			<div class="col-md-10">
+				<p>
+					Lorem ipsum dolor sit amet, consectetueradipiscing elied diam nonummy nibh euisod tincidunt ut laoreet dolore magna aliquam erat volutpatorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+		</div>
+		<hr>
+		<div class="row">
+			<div class="col-md-2">
+				<img src="img/services-image-3.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
+			</div>
+			<div class="col-md-10">
+				<p>
+					Lorem ipsum dolor sit amet, consectetueradipiscing elied diam nonummy nibh euisod tincidunt ut laoreet dolore magna aliquam erat volutpatorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4 sidebar">
+		<div class="sidebox">
+			<h3 class="sidebox-title">Sample Sidebar Content</h3>
+			<p>Lorem Ipsum is simply dummy text of the printing and <a href="#">typesetting industry</a>.</p>
+			<p> Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>     
+
+			<h4 class="sidebox-title">Sidebar Categories</h4>
+			<ul>
+				<li><a href="#">Quisque diam lorem sectetuer adipiscing</a></li>
+				<li><a href="#">Interdum vitae, adipiscing dapibus ac</a></li>
+				<li><a href="#">Scelerisque ipsum auctor vitae, pede</a></li>
+				<li><a href="#">Donec eget iaculis lacinia non erat</a></li>
+				<li><a href="#">Lacinia dictum elementum velit fermentum</a></li>
+				<li><a href="#">Donec in velit vel ipsum auctor pulvinar</a></li>
+				<li><a href="#">Donec eget iaculis lacinia non erat</a></li>
+				<li><a href="#">Lacinia dictum elementum velit fermentum</a></li>
+				<li><a href="#">Donec in velit vel ipsum auctor pulvinar</a></li>
+				<li><a href="#">Donec eget iaculis lacinia non erat</a></li>
+				<li><a href="#">Lacinia dictum elementum velit fermentum</a></li>
+				<li><a href="#">Donec in velit vel ipsum auctor pulvinar</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
