--- a/views/contact.html
+++ b/views/contact.html
@@ -1,5 +1,5 @@
 <div class="row sidebar">
-	<div class="col-sm-8 sidebar" ng-controller="ContactCtrl">
+	<div class="col-md-8 sidebar" ng-controller="ContactCtrl">
 		<div class="col-md-12">
 			<h1>Contact Us</h1>
 		</div>
@@ -42,7 +42,7 @@
 			</div>
 		</form>
 	</div>
-	<div class="col-sm-4 sidebar">
+	<div class="col-md-4 sidebar">
 		<div class="sidebox">
 			<h3 class="sidebox-title">Contact Information</h3>
 			<p></p>
