add error page and images,modify logout code

--- a/views/custom_error.html
+++ b/views/custom_error.html
@@ -1,10 +1,12 @@
 <html>
-<head></head>
+<head>
+  <meta charset="UTF-8">
+  <title>Error Occured</title>
+</head>
 <body>
-	<H1>:( OOPS SOME ERROR HAPPEN...PLEASE ASK ADMINISTRATOR TO SOLVE THIS. 
-	SORRY FOR THE INCONVENIENCE.
-	</H1>
-	
-	<a href="/">Back to Home </a>
+
+  <img src="/img/404.gif" alt="Page Not Found (404)." style="position: absolute; left: 50%; top: 50%; margin-left: -285px; margin-top: -190px;">
+<h1><a href="/">Back to Home </a></h1>
 </body>
+
 </html>
