--- a/views/userHome.html
+++ b/views/userHome.html
@@ -37,8 +37,11 @@
 							<div class="row">
 								<div class="col-md-10">
 									<p>
-										Lorem ipsum dolor sit amet, consectetueradipiscing elied diam nonummy nibh euisod tincidunt ut laoreet dolore magna aliquam erat volutpatorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-										Lorem ipsum dolor sit amet, consectetueradipiscing elied diam nonummy nibh euisod tincidunt ut laoreet dolore magna aliquam erat volutpatorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+										Name:<%=userInfo[0]%> &nbsp;<%=userInfo[1]%> </br>
+										Email:<%=userInfo[3]%></br>
+										Username:<%=userInfo[2]%></br>
+										Phone No:<%=userInfo[4]%></br>
+										Address:<%=userInfo[5]%>
 									</p>
 								</div>
 							</div>
