adding changes for save and update user and hooking ui

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -208,3 +208,26 @@ body {
 	border-color: #000 ##000 #000 transparent;
 	*border-left-color: #ffffff;
 }
+
+form[name="editableForm"] > div {
+  height: auto;
+  padding: 5px 0;
+}
+
+form[name="editableForm"] .title {
+  display: inline-block;
+  font-weight: bold;
+  padding-top: 5px;
+  vertical-align: top;
+  min-width: 90px;
+}
+
+form[name="editableForm"] .editable {
+  display: inline-block;
+  padding-top: 5px;
+  vertical-align: top;
+}
+
+form[name="editableForm"] select {
+  width: 120px;
+}
