--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
 										</span>
 										<form class="form col-md-12 center-block" name="form" action="/login" method="post" novalidate>
 											<div class="form-group" ng-class="error('username')">
-												<input type="text" id="username" ng-model="user.username" name="username" class="form-control input-lg" placeholder="Email" required>
+												<input type="text" id="username" ng-model="user.username" name="username" class="form-control input-lg" placeholder="Username" autocomplete="off" required>
 												<span class="help-block" ng-show="form.username.$invalid && form.username.$dirty">
 													Username is required.
 												</span>
@@ -50,7 +50,34 @@
 												</span>
 											</div>
 											<div class="form-group">
+												<button class="btn btn-primary btn-lg" ng-click="register()" type="button">Register</button>
 												<button ng-disabled="form.$invalid" class="btn btn-primary btn-lg" type="submit"> Sign In </button>
+												<button class="btn btn-primary btn-lg" ng-click="cancel()" type="button">Cancel</button>
+											</div>
+										</form>
+									</div>
+								</script>
+								<script type="text/ng-template" id="registerModal.html">
+									<div class="modal-header">
+										<h1 class="text-center">New User Registration</h1>
+									</div>
+									<div class="modal-footer" style="margin-top:0px">
+										<form class="form col-md-12 center-block" name="form" novalidate>
+											<div class="form-group" ng-class="error('first_name')">
+												<input type="text" id="first_name" ng-model="user.first_name" name="first_name" class="form-control input-lg" placeholder="First Name" autocomplete="off" required>
+												<span class="help-block" ng-show="form.first_name.$invalid && form.first_name.$dirty">
+													first name is required.
+												</span>
+											</div>
+											<div class="form-group" ng-class="error('last_name')">
+												<input type="text" id="last_name" ng-model="user.last_name" name="last_name" class="form-control input-lg" placeholder="Last Name" autocomplete="off" required>
+												<span class="help-block" ng-show="form.last_name.$invalid && form.last_name.$dirty">
+													last name is required.
+												</span>
+											</div>
+
+											<div class="form-group">
+												<button ng-disabled="form.$invalid" class="btn btn-primary btn-lg" type="submit"> Register </button>
 												<button class="btn btn-primary btn-lg" ng-click="cancel()" type="button">Cancel</button>
 											</div>
 										</form>
