--- a/views/index.html
+++ b/views/index.html
@@ -59,26 +59,57 @@
 								</script>
 								<script type="text/ng-template" id="registerModal.html">
 									<div class="modal-header">
-										<h1 class="text-center">New User Registration</h1>
+										<h2 class="text-center">New User Registration</h2>
 									</div>
 									<div class="modal-footer" style="margin-top:0px">
-										<form class="form col-md-12 center-block" name="form" novalidate>
+										<form class="form col-md-12 center-block" name="form" method="post" action="/saveUser" novalidate>
 											<div class="form-group" ng-class="error('first_name')">
-												<input type="text" id="first_name" ng-model="user.first_name" name="first_name" class="form-control input-lg" placeholder="First Name" autocomplete="off" required>
+												<input type="text" id="first_name" ng-model="user.first_name" name="first_name" class="form-control input-sm" placeholder="First Name" autocomplete="off" required>
 												<span class="help-block" ng-show="form.first_name.$invalid && form.first_name.$dirty">
 													first name is required.
 												</span>
 											</div>
 											<div class="form-group" ng-class="error('last_name')">
-												<input type="text" id="last_name" ng-model="user.last_name" name="last_name" class="form-control input-lg" placeholder="Last Name" autocomplete="off" required>
+												<input type="text" id="last_name" ng-model="user.last_name" name="last_name" class="form-control input-sm" placeholder="Last Name" autocomplete="off" required>
 												<span class="help-block" ng-show="form.last_name.$invalid && form.last_name.$dirty">
 													last name is required.
 												</span>
 											</div>
+											<div class="form-group" ng-class="error('email')">
+												<input type="email" id="email" ng-model="user.email" name="email" class="form-control input-sm" ng-pattern="EMAIL_REGXP" placeholder="Email" autocomplete="off" required>
+												<span class="help-block" ng-show="form.email.$invalid && form.email.$dirty">
+													Not a valid email address.
+												</span>
+											</div>
 
+											<div class="form-group" ng-class="error('phone_no')">
+												<input type="text" id="phone_no" ng-model="user.phone_no" name="phone_no" class="form-control input-sm" placeholder="Phone Number" autocomplete="off" required>
+												<span class="help-block" ng-show="form.phone_no.$invalid && form.phone_no.$dirty">
+													Phone Number is required.
+												</span>
+											</div>
+											<div class="form-group" ng-class="error('username')">
+												<input type="text" id="username" ng-model="user.username" name="username" class="form-control input-sm" placeholder="Username" autocomplete="off" required>
+												<span class="help-block" ng-show="form.username.$invalid && form.username.$dirty">
+													Username is required.
+												</span>
+											</div>
+											<div class="form-group" ng-class="error('password')">
+												<input type="password" id="password" ng-model="user.password" name="password" class="form-control input-sm" placeholder="Password" autocomplete="off" required>
+												<span class="help-block" ng-show="form.password.$invalid && form.password.$dirty">
+													Password is required.
+												</span>
+											</div>
+											<div class="form-group" ng-class="error('address')">
+												<textarea id="address" ng-model="user.address" name="address" class="form-control input-sm" placeholder="Address" style="resize:none;" required>
+												</textarea>
+												<span class="help-block" ng-show="form.address.$invalid && form.address.$dirty">
+													Address is required.
+												</span>
+											</div>
 											<div class="form-group">
-												<button ng-disabled="form.$invalid" class="btn btn-primary btn-lg" type="submit"> Register </button>
-												<button class="btn btn-primary btn-lg" ng-click="cancel()" type="button">Cancel</button>
+												<button ng-disabled="form.$invalid" class="btn btn-primary btn-sm" type="submit"> Register </button>
+												<button class="btn btn-primary btn-sm" ng-click="cancel()" type="button">Cancel</button>
 											</div>
 										</form>
 									</div>
